[project]
name = "polymerase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "logbar>=0.0.4",
    "msgspec>=0.19.0",
    "polars>=1.30.0",
    "trio>=0.30.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.18.1",
    "ruff>=0.11.13",
]

[tool.pyrefly]
project-includes = ["**/*.py"]
project-excludes = ["**/__pycache__/**/*.py*", "**/.[!/.]*", "**/*venv/**"]
python-interpreter = ".venv/bin/python3"
